# blog-project

./: .env.example  Cargo.toml  README.md
blog-cli/: .env.example  Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs  models.rs
blog-server/: Cargo.toml  build.rs
blog-server/migrations/: 20251130164210_create_users.sql  20251130170145_create_posts.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  mod.rs  post_service.rs
blog-server/src/data/: mod.rs  post_repository.rs  user_repository.rs
blog-server/src/domain/: error.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  logging.rs  mod.rs  security.rs
blog-server/src/presentation/: auth.rs  dto.rs  grpc_service.rs  mod.rs
blog-server/src/presentation/handler/: mod.rs  protected.rs  public.rs
blog-server/src/presentation/middleware/: jwt.rs  mod.rs  request_id.rs
blog-wasm/: Cargo.toml  index.html  main.js
blog-wasm/src/: lib.rs
