[workspace]
members = [
    "blog-server",
    "blog-client",
    "blog-cli",
    "blog-wasm",
]

resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.42" , features = ["serde"]  }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
sqlx = { version = "0.8.6",features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"]  }
tracing = {version = "0.1.43"}
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "chrono", "time"] }
actix-web = "4.12.1"
actix-cors = "0.7.1"
actix-service = "2"
dotenvy = "0.15.7"
async-trait = "0.1.89"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
argon2="0.5.3"
rand_core = { version = "0.6", features = ["getrandom"] }
futures-util = "0.3.31"
