[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic={workspace = true}
thiserror={workspace = true}
reqwest = { workspace = true  }
serde_json  = { workspace = true  }
anyhow  = { workspace = true  }
chrono = { workspace = true  }
serde = { workspace = true  }
uuid = { workspace = true  }

[build-dependencies]
tonic-build = "0.11"
