[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = {workspace = true}
chrono = {workspace = true }
serde = { workspace = true}
thiserror =  {workspace = true}
sqlx =  {workspace = true}
tracing-subscriber =  {workspace = true}
actix-web = {workspace = true}
actix-cors = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
dotenvy = {workspace = true}
actix-service = {workspace = true}
futures-util = "0.3.31"

[build-dependencies]
tonic-build = "0.11.0"
