[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = {workspace = true}
chrono = {workspace = true }
serde = { workspace = true}
serde_json = { workspace = true}
thiserror =  {workspace = true}
sqlx =  {workspace = true}
tracing-subscriber =  {workspace = true}
actix-web = {workspace = true}
actix-cors = {workspace = true}
anyhow = {workspace = true}
tracing = {workspace = true}
dotenvy = {workspace = true}
actix-service = {workspace = true}
jsonwebtoken = {workspace = true}
argon2 = {workspace = true}
rand_core = {workspace = true}
async-trait = {workspace = true}
futures-util = {workspace = true}
tracing-log = { workspace = true}
tonic = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
tokio = { workspace = true}

[build-dependencies]
tonic-build = "0.11.0"
